kubernetes/clusters/decode/collab-azure/Ingress/backend-ingress/backend-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-metrics-ingress
  namespace: decode-metrics
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers use-proxy-protocol: "true"
spec:
  tls:
  - hosts:
    - collab-azure.decode-iot.com
    secretName: tls-secret
  rules:
    - host: collab-azure.decode-iot.com
      http:
        paths:
        - backend:
            service:
              name: prometheus-service
              port:
                number: 80
          path: /prometheus/(.*)
          pathType: Prefix
